--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,26 @@ body, html {
 
 }
 
+.small {
+
+
+}
+
+.medium {
+
+
+}
+
+.large {
+
+
+}
+
+
+
+
+
+
 .container, h1 {
   width: 80%;
   max-width: 600px;
